# matrix

./: .gitignore  Containerfile  README.md
.github/workflows/: build.yml
dotfiles/: install.sh
dotfiles/config/environment.d/: 50-ui-polish.conf
dotfiles/config/matrix/: standort
dotfiles/config/matugen/: config.toml
dotfiles/config/matugen/templates/: matrix-niri.kdl  matrix-palette.json  pywal-colors.json
dotfiles/config/niri/: binds-custom.kdl  local.kdl  zirconium-mit-fensterdeko.kdl
dotfiles/config/qt5ct/: qt5ct.conf
dotfiles/config/qt6ct/: qt6ct.conf
dotfiles/config/systemd/user/: matrix-gesundheit.service  matrix-gesundheit.timer  matrix-klang-hooks.service  matrix-wachter.path  matrix-wachter.service  matrix-wachter.timer  sync-kdeglobals.path  sync-kdeglobals.service  theme-dark.service  theme-dark.timer  theme-light.service  theme-light.timer  theme-sonne-login.service  theme-sonne.service  theme-sonne.timer
etc/greetd/: config.toml  matrix-greeter.kdl
etc/matrix/: morpheus-niri.kdl  recovery-niri.kdl
etc/modprobe.d/: disable-nvidia-usbc-i2c.conf
etc/pam.d/: matrix-sperre
etc/skel/.config/: mimeapps.list
etc/skel/.config/DankMaterialShell/: settings.json
etc/skel/.config/matrix/: dock-pins
etc/skel/.config/niri/: config.kdl  leinwand-start.sh  local.kdl
etc/skel/.local/state/DankMaterialShell/: session.json
etc/systemd/logind.conf.d/: 50-matrix-power.conf
etc/systemd/system/: matrix-home-snapshot.service  matrix-home-snapshot.timer  matrix-sicherung.service  matrix-sicherung.timer
etc/systemd/system/greetd.service.d/: render-fix.conf
etc/tmpfiles.d/: home.conf
etc/udev/rules.d/: 99-render-node-perms.rules
etc/xdg/fastfetch/: config.jsonc
laptop/: GO
leinwand/: 0001-leinwand-drag.patch  0002-smithay-keymap-pro-wl_keyboard.patch  README.md
leinwand/session/: README.md  leinwand-session.kdl  leinwand-start.sh  matrix-leinwand.desktop  niri-leinwand-session
matrixkit/: Cargo.toml
matrixkit/apps/aufnahme/: Cargo.toml
matrixkit/apps/aufnahme/src/: main.rs
matrixkit/apps/bar/: Cargo.toml
matrixkit/apps/bar/src/: main.rs  tray.rs
matrixkit/apps/codes/: Cargo.toml
matrixkit/apps/codes/src/: main.rs  totp.rs
matrixkit/apps/dateien/: Cargo.toml
matrixkit/apps/dateien/src/: main.rs
matrixkit/apps/dock/: Cargo.toml
matrixkit/apps/dock/src/: main.rs
matrixkit/apps/einstellungen/: Cargo.toml
matrixkit/apps/einstellungen/src/: dev.rs  klaenge.rs  leinwand.rs  leisten.rs  main.rs  uebersicht.rs  verbindungen.rs
matrixkit/apps/farben/: Cargo.toml
matrixkit/apps/farben/src/: main.rs
matrixkit/apps/greeter/: Cargo.toml
matrixkit/apps/greeter/src/: greetd.rs  main.rs
matrixkit/apps/hilfe/: Cargo.toml
matrixkit/apps/hilfe/src/: inhalte.rs  main.rs
matrixkit/apps/hintergrund/: Cargo.toml
matrixkit/apps/hintergrund/src/: main.rs
matrixkit/apps/icons/: Cargo.toml
matrixkit/apps/icons/src/: main.rs
matrixkit/apps/klaenge/: Cargo.toml
matrixkit/apps/klaenge/src/: hooks.rs  main.rs  synth.rs
matrixkit/apps/kontext/: Cargo.toml
matrixkit/apps/kontext/src/: main.rs
matrixkit/apps/mitteilungen/: Cargo.toml
matrixkit/apps/mitteilungen/src/: main.rs
matrixkit/apps/morpheus/: Cargo.toml
matrixkit/apps/morpheus/src/: main.rs
matrixkit/apps/osd/: Cargo.toml
matrixkit/apps/osd/src/: main.rs
matrixkit/apps/player/: Cargo.toml
matrixkit/apps/player/src/: main.rs
matrixkit/apps/schluessel/: Cargo.toml
matrixkit/apps/schluessel/src/: main.rs
matrixkit/apps/sperre/: Cargo.toml  build.rs
matrixkit/apps/sperre/src/: main.rs  pam.rs
matrixkit/apps/start/: Cargo.toml
matrixkit/apps/start/src/: main.rs
matrixkit/apps/sysmon/: Cargo.toml
matrixkit/apps/sysmon/src/: main.rs
matrixkit/apps/tastatur/: Cargo.toml
matrixkit/apps/tastatur/src/: einspeisung.rs  main.rs
matrixkit/apps/terminal/: Cargo.toml
matrixkit/apps/terminal/src/: main.rs
matrixkit/apps/updater/: Cargo.toml
matrixkit/apps/updater/src/: main.rs
matrixkit/apps/wachdienst/: Cargo.toml
matrixkit/apps/wachdienst/src/: main.rs
matrixkit/apps/web/: Cargo.toml
matrixkit/apps/web-inhalt/: Cargo.toml
matrixkit/apps/web-inhalt/src/: main.rs
matrixkit/apps/web/src/: main.rs
matrixkit/apps/wiederherstellung/: Cargo.toml
matrixkit/apps/wiederherstellung/src/: main.rs
matrixkit/apps/zentrale/: Cargo.toml
matrixkit/apps/zentrale/src/: main.rs
matrixkit/matrixkit-icons/: Cargo.toml
matrixkit/matrixkit-icons/src/: lib.rs  main.rs
matrixkit/matrixkit-theme/: Cargo.toml
matrixkit/matrixkit-theme/src/: lib.rs
matrixkit/matrixkit-widgets/: Cargo.toml
matrixkit/matrixkit-widgets/src/: lib.rs
matrixkit/matrixkit-widgets/tests/: familien_polizei.rs
matrixkit/schluessel/: Cargo.toml
matrixkit/schluessel/src/: main.rs
matrixkit/wache/: Cargo.toml
matrixkit/wache/src/: main.rs
matrixkit/wachter/: Cargo.toml
matrixkit/wachter/src/: main.rs
usr/lib/systemd/system/: matrix-gong.service
usr/libexec/: morpheus-installiere
usr/share/applications/: matrix-aufnahme.desktop  matrix-codes.desktop  matrix-dateien.desktop  matrix-einstellungen.desktop  matrix-farben.desktop  matrix-hilfe.desktop  matrix-icons.desktop  matrix-player.desktop  matrix-schluessel-app.desktop  matrix-sysmon.desktop  matrix-terminal.desktop  matrix-updater.desktop  matrix-web.desktop  morpheus.desktop
usr/share/matrix/: fastfetch-logo.txt
usr/share/plymouth/themes/matrix/: matrix.plymouth
usr/share/polkit-1/rules.d/: 60-morpheus.rules  61-matrix-os.rules
usr/share/quickshell/dms-greeter/Modules/Greetd/: GreeterContent.qml
usr/share/quickshell/dms-greeter/Services/: PortalService.qml
