[package]
name = "matrixkit-icons"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Lebende App-Icons — generiert aus der aktuellen System-Palette"

[dependencies]
matrixkit-theme = { path = "../matrixkit-theme" }
tiny-skia = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
