[package]
name = "matrix-aufnahme"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Aufnahme — Bildschirmfoto und -film in der Leitbild-Grammatik"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
iced = { version = "0.14", features = ["thread-pool", "image"] }
iced_layershell = "0.18"
