[package]
name = "matrix-dateien"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Dateien — der Dateimanager: Seitenleiste, Liste, Pfadleiste, Papierkorb"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets", features = ["bild"] }
matrixkit-icons = { path = "../../matrixkit-icons" }
iced = { version = "0.14", features = ["thread-pool", "image"] }
iced_layershell = "0.18"
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
