[package]
name = "matrix-einstellungen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Einstellungen — die System-Einstellungen im MatrixKit-Stil"

[dependencies]
iced = { version = "0.14", features = ["thread-pool"] }
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets", features = ["bild"] }
matrixkit-icons = { path = "../../matrixkit-icons" }
serde_json = "1"
sysinfo = "0.32"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
