[package]
name = "matrix-greeter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Greeter — der Login-Screen: Wallpaper, Avatar, Passwort, Wächter"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
matrixkit-icons = { path = "../../matrixkit-icons" }
iced = { version = "0.14", features = ["thread-pool", "image"] }
iced_layershell = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
