[package]
name = "matrix-hilfe"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Hilfe — alles Wissenswerte zu MatrixKit für Nutzer und Entwickler"

[dependencies]
iced = { version = "0.14", features = ["thread-pool"] }
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
matrixkit-icons = { path = "../../matrixkit-icons" }
