[package]
name = "matrix-hintergrund"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Hintergrund — der Wallpaper-Dienst: malt das Bild, erzeugt die Palette"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
iced = { version = "0.14", features = ["thread-pool", "image"] }
iced_layershell = "0.18"
serde_json = "1"
