[package]
name = "matrix-icons-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Icons — der Icon Composer: lebende Icons aus Ebenen komponieren"

[[bin]]
name = "matrix-icons"
path = "src/main.rs"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
matrixkit-icons = { path = "../../matrixkit-icons" }
iced = { version = "0.14", features = ["thread-pool", "image"] }
