[package]
name = "matrix-kontext"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Kontext — das Desktop-Kontextmenü: erscheint an der Maus, verweht beim Wegklicken"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
iced = { version = "0.14", features = ["thread-pool"] }
iced_layershell = "0.18"
serde_json = "1"
