[package]
name = "matrix-mitteilungen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Mitteilungen — der Benachrichtigungs-Daemon: Popups in Kit-Gestalt"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
matrixkit-icons = { path = "../../matrixkit-icons" }
iced = { version = "0.14", features = ["thread-pool", "image"] }
iced_layershell = "0.18"
zbus = "5"
