[package]
name = "matrix-morpheus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Morpheus — der geführte Assistent, der Matrix auf eine Platte installiert"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
matrixkit-icons = { path = "../../matrixkit-icons" }
iced = { version = "0.14", features = ["thread-pool", "image"] }
iced_layershell = "0.18"
