[package]
name = "matrix-schluessel-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Schlüssel — USB-Stick als Login-Schlüssel einrichten"

[dependencies]
iced = { version = "0.14", features = ["thread-pool"] }
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
matrixkit-icons = { path = "../../matrixkit-icons" }
