[package]
name = "matrix-sysmon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Systemmonitor — die erste MatrixKit-App"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
matrixkit-icons = { path = "../../matrixkit-icons" }
iced = { version = "0.14", features = ["thread-pool", "canvas"] }
iced_layershell = "0.18"
sysinfo = "0.32"
