[package]
name = "matrix-tastatur"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Tastatur — die Bildschirmtastatur, erscheint wenn keine physische tippt"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
iced = { version = "0.14", features = ["thread-pool"] }
iced_layershell = "0.18"
wayland-client = "0.31"
wayland-protocols-misc = { version = "0.3", features = ["client"] }
