[package]
name = "matrix-terminal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Terminal — die Kommandozeile in der MatrixKit-Grammatik"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
iced = { version = "0.14", features = ["thread-pool", "advanced"] }
alacritty_terminal = "0.24"
