[package]
name = "matrix-web"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Matrix Web — der Browser als reine MatrixKit-App (Chrome); WebKit trägt matrix-web-inhalt"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
iced = { version = "0.14", features = ["thread-pool"] }
