[package]
name = "matrix-wiederherstellung"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Wiederherstellung — die geführte Recovery des Wächters"

[dependencies]
iced = { version = "0.14", features = ["thread-pool", "canvas"] }
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
matrixkit-icons = { path = "../../matrixkit-icons" }
