[package]
name = "matrix-zentrale"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Matrix Zentrale — das Kontrollzentrum: Klang, Funk, Bildschirm, System"

[dependencies]
matrixkit-theme = { path = "../../matrixkit-theme" }
matrixkit-widgets = { path = "../../matrixkit-widgets" }
iced = { version = "0.14", features = ["thread-pool"] }
iced_layershell = "0.18"
